# rules_go_linker_error

./: BUILD.bazel  README.md  WORKSPACE.bazel
